--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -3,6 +3,10 @@
   margin: 0;
   font-family: sans-serif;
 }
+
+body {
+  overflow-x: hidden;
+}
 /* Hero Section */
 
 .show-content {
@@ -29,7 +33,8 @@
     rgba(65, 184, 179, 1) 100%
   );
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#020024",endColorstr="#41b8b3",GradientType=1);
-  height: 700px;
+  height: 100vh;
+  width: 100vw;
   color: white;
   display: flex;
   justify-content: center;
@@ -61,25 +66,59 @@
   margin-bottom: 50px;
 }
 
-.show-content button {
+.click-to-show-content {
   background-color: transparent;
   border: 2px solid white;
   border-radius: 9px;
   padding: 15px 40px;
-  font-size: 22px;
-  font-weight: bold;
   color: white;
   cursor: pointer;
 }
 
-.show-content button:hover {
+.click-to-show-content a {
+  font-size: 22px;
+  font-weight: bold;
+  color: white;
+}
+
+.click-to-show-content:hover {
   background-color: #34495e;
+}
+
+.go-to-table-button {
+  background-color: transparent;
+  padding: 10px 30px;
+  border-radius: 9px;
+  cursor: pointer;
+  border: none;
+  margin-top: 40px;
+  font-size: 1.2rem;
+  color: white;
+  font-weight: bold;
+}
+
+.go-to-table-button svg {
+  padding-right: 5px;
+}
+
+.go-to-table-button a {
+  font-size: 1.2rem;
+  color: white;
+}
+
+.go-to-table-button:hover {
+  color: #ffffff;
+}
+
+.go-to-table-button {
+  display: none;
 }
 
 /* Table */
 
 table {
-  width: 100%;
+  width: 100vw;
+  height: 100vh;
   border-collapse: collapse;
   text-align: center;
   cursor: pointer;
@@ -103,4 +142,79 @@ th {
 
 .table-container {
   display: none;
+}
+
+/* Responsive for Mobile Screens */
+
+@media only screen and (max-width: 600px) {
+  .show-content h2 {
+    font-size: 1.5rem;
+    max-width: 350px;
+    line-height: 35px;
+    margin-bottom: 20px;
+  }
+
+  .show-content a {
+    font-size: 1.2rem;
+  }
+
+  .show-content p {
+    max-width: 350px;
+    line-height: 30px;
+    margin-bottom: 30px;
+  }
+
+  .click-to-show-content {
+    background-color: transparent;
+    border: 1.5px solid white;
+    border-radius: 9px;
+    padding: 15px 25px;
+    font-size: 1rem;
+    font-weight: bold;
+    color: white;
+    cursor: pointer;
+  }
+
+  .click-to-show-content a {
+    font-size: 1rem;
+    font-weight: bold;
+  }
+
+  table thead {
+    display: none;
+  }
+
+  table tr {
+    display: block;
+    border-bottom: 4px solid #34495e;
+    padding: 20px 40px;
+  }
+
+  table td {
+    border-bottom: 1px solid #d9d9d9;
+    display: block;
+    font-size: 1rem;
+    text-align: center;
+  }
+
+  table tr:last-child {
+    border-bottom: 0;
+  }
+
+  table td:first-child {
+    color: #ffffff;
+    font-weight: bold;
+    background-color: #34495e;
+    border-radius: 100%;
+    width: 0.2rem;
+    height: 0.2rem;
+    float: left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  table td:last-child {
+    border-bottom: 0;
+  }
 }
